<resources>
    <string name="app_name">EKO APP</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget password</string>
    <string name="otp">Enter OTP</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_loans">Loans</string>
    <string name="menu_investment">Investment</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_policies">Policies</string>
    <string name="menu_profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="loans">Loans</string>
    <string name="investment">Investment</string>
    <string name="savings">savings</string>
    <string name="policies">Policies</string>
    <string name="logout">Logout</string>
    <string name="adjusted_repayment">Adjusted repayment</string>

    <string-array name="country_array">
        <item>Select County</item>
        <item>India</item>
        <item>Philifins</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="upi_address">upi address</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC CODE</string>

</resources>
